--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -1,39 +1,78 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/scrollView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:context="com.example.textviewsample.MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
-    <util.android.textviews.FontTextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world"
-        android:fontFamily="OpenSans-Regular.ttf"
-        android:textSize="18sp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
-    <util.android.textviews.FontTextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
-        android:text="if (hello_world == true) {}"
-        android:fontFamily="SourceCodePro-Regular.ttf"
-        android:textSize="18sp" />
+        <util.android.textviews.FontTextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="OpenSans-Regular.ttf"
+            android:text="@string/hello_world"
+            android:textSize="18sp" />
 
-    <util.android.textviews.FontTextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:text="AFGNOQ"
-        android:inputType="textCapCharacters"
-        android:fontFamily="EBGaramond-InitialsF1.ttf"
-        android:textSize="18sp" />
+        <util.android.textviews.FontTextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView1"
+            android:fontFamily="SourceCodePro-Regular.ttf"
+            android:text="if (hello_world == true) {}"
+            android:textSize="18sp" />
 
-</RelativeLayout>
+        <util.android.textviews.FontTextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView2"
+            android:fontFamily="EBGaramond-InitialsF1.ttf"
+            android:inputType="textCapCharacters"
+            android:text="AFGNOQ"
+            android:textSize="18sp" />
+
+        <util.android.textviews.FontTextView
+            android:id="@+id/textView4"
+            style="@style/FontableStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView3"
+            android:text="if (hello_world == true) {}" />
+
+        <util.android.textviews.ExpandableTextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView4"
+            android:ellipsize="end"
+            android:text="@string/hipsum"
+            android:textSize="16sp"
+            app:expandColor="#cf12bf"
+            app:trimLength="3" />
+
+        <util.android.textviews.ExpandableTextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView5"
+            android:ellipsize="end"
+            android:fontFamily="Audiowide-Regular.ttf"
+            android:text="@string/hipsum"
+            android:textSize="16sp"
+            app:expandColor="#1a6b02"
+            app:expandText="Reveal More"
+            app:trimLength="3" />
+
+    </RelativeLayout>
+</ScrollView>
