--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="OpenSans-Regular.ttf"
+            android:layout_marginBottom="6dp"
             android:text="@string/hello_world"
             android:textSize="18sp" />
 
@@ -29,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView1"
             android:fontFamily="SourceCodePro-Regular.ttf"
+            android:layout_marginBottom="6dp"
             android:text="if (hello_world == true) {}"
             android:textSize="18sp" />
 
@@ -38,9 +40,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView2"
             android:fontFamily="EBGaramond-InitialsF1.ttf"
+            android:layout_marginBottom="6dp"
             android:inputType="textCapCharacters"
             android:text="AFGNOQ"
-            android:textSize="18sp" />
+            android:textSize="22sp" />
 
         <util.android.textviews.FontTextView
             android:id="@+id/textView4"
@@ -48,7 +51,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView3"
-            android:text="if (hello_world == true) {}" />
+            android:layout_marginBottom="6dp"
+            android:text="@string/hello_world" />
 
         <util.android.textviews.ExpandableTextView
             android:id="@+id/textView5"
@@ -57,6 +61,7 @@
             android:layout_below="@+id/textView4"
             android:ellipsize="end"
             android:text="@string/hipsum"
+            android:layout_marginBottom="6dp"
             android:textSize="16sp"
             app:expandColor="#cf12bf"
             app:trimLength="3" />
@@ -69,6 +74,7 @@
             android:ellipsize="end"
             android:fontFamily="Audiowide-Regular.ttf"
             android:text="@string/hipsum"
+            android:layout_marginBottom="6dp"
             android:textSize="16sp"
             app:expandColor="#1a6b02"
             app:expandText="Reveal More"
