--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -80,5 +80,13 @@
             app:expandText="Reveal More"
             app:trimLength="3" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView7"
+            android:textSize="18sp"
+            android:text="if (hello_world == true) {}"
+            android:layout_below="@+id/textView6"/>
+
     </RelativeLayout>
 </ScrollView>
