--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -19,7 +19,7 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="OpenSans-Regular.ttf"
+            android:fontFamily="OpenSans-Regular"
             android:layout_marginBottom="6dp"
             android:text="@string/hello_world"
             android:textSize="18sp" />
@@ -29,9 +29,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView1"
-            android:fontFamily="SourceCodePro-Regular.ttf"
+            android:fontFamily="SourceCodePro-Regular"
             android:layout_marginBottom="6dp"
-            android:text="if (hello_world == true) {}"
+            android:text="@string/code_sample"
             android:textSize="18sp" />
 
         <util.android.textviews.FontTextView
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView2"
-            android:fontFamily="EBGaramond-InitialsF1.ttf"
+            android:fontFamily="EBGaramond-InitialsF1"
             android:layout_marginBottom="6dp"
             android:inputType="textCapCharacters"
             android:text="AFGNOQ"
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView5"
             android:ellipsize="end"
-            android:fontFamily="Audiowide-Regular.ttf"
+            android:fontFamily="Audiowide-Regular"
             android:text="@string/hipsum"
             android:layout_marginBottom="6dp"
             android:textSize="16sp"
@@ -85,7 +85,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView7"
             android:textSize="18sp"
-            android:text="if (hello_world == true) {}"
+            android:text="@string/code_sample"
             android:layout_below="@+id/textView6"/>
 
     </RelativeLayout>
