--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -86,7 +86,16 @@
             android:id="@+id/textView7"
             android:textSize="18sp"
             android:text="@string/code_sample"
-            android:layout_below="@+id/textView6"/>
+            android:layout_below="@+id/textView6"
+            android:layout_marginBottom="6dp"/>
+
+        <util.android.textviews.VerticalTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hello_world"
+            android:layout_below="@+id/textView7"
+            android:layout_marginBottom="6dp"
+            android:gravity="bottom"/>
 
     </RelativeLayout>
 </ScrollView>
