--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -117,5 +117,23 @@
             android:paddingTop="6dp"
             android:paddingBottom="12dp"/>
 
+        <util.android.textviews.FontVerticalTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView10"
+            android:text="@string/hello_world"
+            android:layout_below="@+id/textView7"
+            android:layout_marginBottom="6dp"
+            android:layout_toRightOf="@+id/textView9"
+            android:textColor="#a93a03"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:fontFamily="Audiowide-Regular"
+            android:paddingLeft="8dp"
+            android:paddingRight="10dp"
+            android:paddingTop="6dp"
+            android:paddingBottom="12dp"
+            android:gravity="bottom"/>
+
     </RelativeLayout>
 </ScrollView>
