--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -139,9 +139,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Click Me"
+            android:id="@+id/textView11"
             android:layout_below="@+id/textView10"
             android:textSize="18sp"
             android:fontFamily="Audiowide-Regular"/>
+
+        <util.android.textviews.ShimmerTextView
+            android:layout_width="wrap_content"
+            android:layout_below="@+id/textView11"
+            android:id="@+id/textView12"
+            android:layout_height="wrap_content"
+            android:text="Shimmer Text"
+            />
 
     </RelativeLayout>
 </ScrollView>
