Basic support for justified text in FontTextView (and derivatives).
Please note: this breaks the expansion text color in ExpandableTextView so not recommended to be used with this widget.

--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -64,8 +64,10 @@
             android:text="@string/hipsum"
             android:layout_marginBottom="6dp"
             android:textSize="16sp"
+            android:fontFamily="sans-serif"
             app:expandColor="#cf12bf"
-            app:trimLength="3" />
+            app:trimLength="4"
+            app:justify="true"/>
 
         <util.android.textviews.ExpandableTextView
             android:id="@+id/textView6"
