--- a/sample2/src/main/res/layout/schedule_item.xml
+++ b/sample2/src/main/res/layout/schedule_item.xml
@@ -19,7 +19,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:clickable="false"
     android:focusable="false"
@@ -29,7 +29,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="Cabin-Bold"
+        android:fontFamily="Johnston"
         android:lines="1"
         android:textSize="20sp"
         android:textStyle="bold"/>
@@ -38,9 +38,10 @@
         android:id="@+id/synopsis"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="Cabin-Regular"
+        android:fontFamily="Johnston"
         android:ellipsize="end"
         app:expandColor="#f72adb"
+        app:justify="true"
         android:textSize="16sp"
         app:trimLength="2"/>
 
