--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -7,159 +7,116 @@
     tools:context="com.example.textviewsample.MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <util.android.textviews.FontTextView
-            android:id="@+id/textView1"
+            android:id="@+id/normal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="OpenSans-Regular"
             android:layout_marginBottom="6dp"
-            android:text="@string/hello_world"
-            android:textSize="18sp" />
-
-        <util.android.textviews.FontTextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView1"
-            android:fontFamily="SourceCodePro-Regular"
-            android:layout_marginBottom="6dp"
-            android:text="@string/code_sample"
-            android:textSize="18sp"
-            android:textStyle="bold"/>
-
-        <util.android.textviews.FontTextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView2"
-            android:fontFamily="EBGaramond-InitialsF1"
-            android:layout_marginBottom="6dp"
-            android:inputType="textCapCharacters"
-            android:text="AFGNOQ"
-            android:textSize="22sp" />
-
-        <util.android.textviews.FontTextView
-            android:id="@+id/textView4"
-            style="@style/FontableStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView3"
-            android:layout_marginBottom="6dp"
-            android:text="@string/hello_world" />
-
-        <util.android.textviews.FontTextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView4"
-            android:ellipsize="end"
-            android:text="@string/hipsum"
-            android:layout_marginBottom="6dp"
-            android:textSize="16sp"
-            android:fontFamily="Audiowide-Regular"
-            app:expandColor="#cf12bf"
-            app:autoMaxLines="false"
-            app:trimLength="4"
-            app:justify="true"
             android:maxLines="4"
+            android:text="@string/hipsum"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="16sp"
+            android:visibility="visible"
             />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@android:color/darker_gray"/>
+
+        <util.android.textviews.FontTextView
+            android:id="@+id/justified"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:maxLines="4"
+            android:text="@string/hipsum"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="16sp"
+            android:visibility="visible"
+            app:justify="true"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@android:color/darker_gray"/>
+
+        <util.android.textviews.FontTextView
+            android:id="@+id/normalEllipsize"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:maxLines="4"
+            android:text="@string/hipsum"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="16sp"
+            android:visibility="visible"
+            android:ellipsize="end"
+            app:justify="false"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@android:color/darker_gray"/>
+
+        <util.android.textviews.FontTextView
+            android:id="@+id/justifyWordEllipsize"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:ellipsize="end"
+            android:maxLines="4"
+            android:text="@string/hipsum"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="16sp"
+            android:visibility="visible"
+            app:justify="true"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@android:color/darker_gray"/>
+
+        <util.android.textviews.FontTextView
+            android:id="@+id/normalWordEllipsize"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:maxLines="4"
+            android:text="@string/hipsum"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="16sp"
+            android:visibility="visible"
+            android:ellipsize="end"
+            app:wordEllipsize="true"
+            app:justify="false"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@android:color/darker_gray"/>
 
         <util.android.textviews.ExpandableTextView
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView5"
-            android:ellipsize="end"
-            android:fontFamily="OpenSans-Regular"
-            android:text="@string/hipsum"
             android:layout_marginBottom="6dp"
+            android:ellipsize="end"
+            android:text="@string/hipsum"
             android:textSize="16sp"
             app:expandColor="#1a6b02"
             app:expandText=" Reveal More"
-            app:trimLength="3" />
+            app:trimLength="4"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView7"
-            android:textSize="18sp"
-            android:text="@string/code_sample"
-            android:layout_below="@+id/textView6"
-            android:layout_marginBottom="6dp"/>
-
-        <util.android.textviews.VerticalTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView8"
-            android:text="@string/hello_world"
-            android:layout_below="@+id/textView7"
-            android:layout_marginBottom="6dp"
-            android:gravity="bottom"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="20dp"
-            android:paddingBottom="5dp"/>
-        <util.android.textviews.VerticalTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView9"
-            android:text="@string/hello_world"
-            android:layout_below="@+id/textView7"
-            android:layout_marginBottom="6dp"
-            android:layout_toRightOf="@+id/textView8"
-            android:textColor="#b91616"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:paddingLeft="5dp"
-            android:paddingRight="10dp"
-            android:paddingTop="6dp"
-            android:paddingBottom="12dp"/>
-
-        <util.android.textviews.FontVerticalTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView10"
-            android:text="@string/hello_world"
-            android:layout_below="@+id/textView7"
-            android:layout_marginBottom="6dp"
-            android:layout_toRightOf="@+id/textView9"
-            android:textColor="#a93a03"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:fontFamily="Audiowide-Regular"
-            android:paddingLeft="8dp"
-            android:paddingRight="10dp"
-            android:paddingTop="6dp"
-            android:paddingBottom="12dp"
-            android:gravity="bottom"/>
-
-        <util.android.textviews.FontButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Click Me"
-            android:id="@+id/textView11"
-            android:layout_below="@+id/textView10"
-            android:textSize="18sp"
-            android:fontFamily="Audiowide-Regular"/>
-
-        <util.android.textviews.ShimmerTextView
-            android:layout_width="wrap_content"
-            android:layout_below="@+id/textView11"
-            android:id="@+id/textView12"
-            android:layout_height="wrap_content"
-            android:text="Shimmer Text"
-            android:fontFamily="Audiowide-Regular"
-            android:textSize="18sp"
-            app:reflectionColor="#2472ef"
-            />
-
-    </RelativeLayout>
+    </LinearLayout>
 </ScrollView>
