--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="234dp"
         android:background="@android:color/background_light"
         android:ellipsize="end"
+        android:linksClickable="true"
         android:paddingBottom="4dp"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
